[CR][Fix] Chat popup facebook style: fix nothing, revert to old version of modal z-index

--- a/frontend/web/less/desktop/post.less
+++ b/frontend/web/less/desktop/post.less
@@ -275,7 +275,6 @@
     display: none;
     width: 725px;
     margin: auto;
-    z-index: 10000;
     .modal-dialog{
         width: 725px;
         min-height: 250px;
