--- a/frontend/web/less/desktop/topic.less
+++ b/frontend/web/less/desktop/topic.less
@@ -6,7 +6,6 @@
     width: 725px;
     margin: auto;
     display: none;
-    z-index: 10000;
     .modal-dialog{
         width: 725px;
         min-height: 250px;
